--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17719,3 +17719,88 @@ p {
 #resetPasswordForm label {
   padding-left: 20px;
 }
+
+
+/* Inside your main CSS file */
+.transaction-description {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.transaction-date {
+  font-size: 14px;
+  color: gray;
+}
+
+.transaction-amount {
+  font-size: 20px;
+}
+
+
+.transaction-type p {
+  font-size: 50px;
+  color: #333;
+}
+
+.transaction-type.credit p {
+  color: green;
+}
+
+.transaction-type.debit p {
+  color: red;
+}
+
+
+/* Styling specific to the return modal */
+#returnModal {
+  display: none; /* Hide by default */
+  position: fixed;
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+}
+
+#returnModal .modal-content {
+  background-color: white;
+  margin: 15% auto; /* Center the modal */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Adjust as necessary */
+}
+
+#returnModal .close {
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+#returnModal .close:hover,
+#returnModal .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Additional styling for select and button */
+#returnModal select,
+#returnModal button {
+  margin: 10px 0;
+  padding: 8px;
+  font-size: 16px;
+}
+
+/* Ensuring button alignment */
+#returnModal button {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+#returnModal button:hover {
+  background-color: #45a049;
+}
+
